2001-05-05  Larry Jones  <larry.jones@sdrc.com>

	* annotate.c (annotate): Pass local to do_module and rannotate_proc
	so that -l actually works.
	* log.c (cvslog): Ditto.
	* patch.c (patch): Ditto; make local local instead of global.
	(patch_proc): Use local_specified parameter instead of global.
	* tag.c (cvstag, rtag_proc): Ditto.

2001-05-05  Larry Jones  <larry.jones@sdrc.com>

	* client.h: Declare "struct buffer" outside prototype for __STDC__
	compilers.

2001-05-04  Derek Price  <dprice@collab.net>

	* client.c:  General refactoring.  Removed several global variables in
	favor of passing locals and/or dynamic evaluation.
	(recv_line): Removed this function.
	(make_bufs_from_fds): New function with factored code.
	(connect_to_forked_server): New prototype.  Use new functions.
	(connect_to_pserver): New prototype.  Use new functions.
	(connect_to_gserver): New prototype.  Use new API.
	(auth_server): Factored this portion of the pserver code so it can be
	shared.  Rewrote to use buffers rather than depending on a socket.
	(start_rsh_server): New prototype.  Use new API.
	(start_tcp_server): New prototype.  Use new API.
	(start_server): Factor some code.  Use new API.
	* client.h: New prototypes.
	* cvs.h: Gratuitous reformatting.  Use new root.h.
	* login.c (login): Use new connect_to_pserver API.
	* root.h: New file.  Contains some code that used to be in cvs.h.

2001-05-04  Derek Price  <dprice@collab.net>

	* client.c: Gratuitous reformatting.
	* client.h: Ditto.

2001-05-04  Derek Price  <dprice@collab.net>

	* zlib.c (compress_buffer_shutdown_input): Use new buffer shutdown
	prototype.
	(compress_buffer_shutdown_output): Ditto.
	(Thanks to Pavel Roskin <proski@gnu.org>.)

2001-05-03  Derek Price  <dprice@collab.net>

	* buffer.c (struct stdio_buffer_closure): New structure to hold a
	FILE * and the child's PID when necessary.
	(stdio_buffer_initialize): Change proto to accept PID.  Set up new
	closure.  Pass new stdio_buffer_shutdown to buf_initialize.